--- a/src/app/contact/add-contact/add-contact.component.scss
+++ b/src/app/contact/add-contact/add-contact.component.scss
@@ -1,4 +1,7 @@
 .add-form-container {
-  max-width: 960px;
-  margin: 50px auto;
+
+  border: 1px solid black;
+  border-radius: 20px;
+  box-shadow: gray;
+  background-color:gainsboro
 }
