--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -3,19 +3,37 @@
     <div
       class="col-md-2 col-12 d-flex justify-content-start justify-content-md-center"
     >
-      <a href="" [routerLink]="['/contacts']" aria-label="Contacts">
-        <fa-icon [icon]="faUsers" size="5x" style="color: black"></fa-icon
+      <a
+        href=""
+        [routerLink]="['/contacts']"
+        attr.aria-label="{{ 'contacts' | translate }}"
+        title="{{ 'contacts' | translate }}"
+      >
+        <fa-icon class="contacts-icon" [icon]="faUsers" size="5x"></fa-icon
       ></a>
     </div>
     <div class="col-md-10 col-12 d-flex flex-wrap">
       <div class="me-4">
         <h1>{{ "contact.manager" | translate }}</h1>
       </div>
-      <div class="d-flex align-items-center">
+      <div class="d-flex align-items-center" *ngIf="authService.isLoggedIn()">
         <button [routerLink]="['/new']" class="btn btn-success">
           <fa-icon [icon]="faUser" size="lg" class="text-dark"></fa-icon>
-          Add Contact
+          {{ "add.contact" | translate }}
         </button>
+      </div>
+      <div
+        class="d-flex align-items-center logout"
+        *ngIf="authService.isLoggedIn()"
+      >
+        <a
+          href="javascript:void(0);"
+          (click)="logout()"
+          class="btn btn-warning"
+        >
+          <fa-icon [icon]="faSignOutAlt" size="lg" class="text-dark"></fa-icon>
+          {{ "logout" | translate }}
+        </a>
       </div>
     </div>
   </div>
